tests/error/function_arg_res.gw
// [contains] in function
 #function void test(int now){}
